@@ -12,22 +12,19 @@ buildscript {
     repositories {
         mavenLocal()
         jcenter()
-        maven { url 'https://oss.sonatype.org/content/groups/public' }
     }
 }
 
 plugins {
     id 'application'
     id 'com.gradle.build-scan' version '2.4.2'
-    id 'com.install4j.gradle' version '8.0.1'
-    id 'com.github.johnrengelman.shadow' version '5.1.0'
     id "com.simonharrer.modernizer" version '1.8.0-1'
     id 'me.champeau.gradle.jmh' version '0.4.8'
     //id 'net.ltgt.errorprone' version '0.8.1'
-    id 'com.github.ben-manes.versions' version '0.25.0'
+    id 'com.github.ben-manes.versions' version '0.26.0'
     id 'org.javamodularity.moduleplugin' version '1.5.0'
     id 'org.openjfx.javafxplugin' version '0.0.8'
-    id 'org.beryx.jlink' version '2.15.1'
+    id 'org.beryx.jlink' version '2.16.0'
 }
 
 // use the gradle build scan feature: https://scans.gradle.com/get-started
@@ -40,7 +37,6 @@ apply plugin: 'java'
 apply plugin: 'application'
 apply plugin: 'project-report'
 apply plugin: 'jacoco'
-apply plugin: 'install4j'
 apply plugin: 'me.champeau.gradle.jmh'
 apply plugin: 'checkstyle'
 apply plugin: JabRefAntlrPlugin
@@ -50,11 +46,9 @@ apply plugin: LocalizationPlugin
 apply from: 'eclipse.gradle'
 
 group = "org.jabref"
-version = "5.0-dev"
-project.ext.threeDotVersion = "5.0.0.1"
-project.ext.install4jDir = hasProperty("install4jDir") ? getProperty("install4jDir") : (OperatingSystem.current().isWindows() ? 'C:/Program Files/install4j8' : 'install4j8')
-sourceCompatibility = 11
-targetCompatibility = 11
+version = "5.0.0"
+sourceCompatibility = 12
+targetCompatibility = 12
 mainClassName = "$moduleName/org.jabref.JabRefLauncher"
 
 // TODO: Ugly workaround to temporarily ignore build errors to dependencies of latex2unicode
@@ -64,7 +58,6 @@ patchModules.config = [
         "test2=fastparse-utils_2.12-1.0.0.jar",
         "test3=sourcecode_2.12-0.1.4.jar"
 ]
-
 
 // These are the Java version requirements we will check on each start of JabRef
 ext.minRequiredJavaVersion = "1.8.0_171"
@@ -109,7 +102,7 @@ configurations {
 }
 
 javafx {
-    version = "11.0.2"
+    version = "13"
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.swing' ]
 }
 
@@ -117,9 +110,9 @@ dependencies {
     // Include all jar-files in the 'lib' folder as dependencies
     compile fileTree(dir: 'lib', includes: ['*.jar'])
 
-    compile 'org.apache.pdfbox:pdfbox:2.0.16'
-    compile 'org.apache.pdfbox:fontbox:2.0.16'
-    compile 'org.apache.pdfbox:xmpbox:2.0.16'
+    compile 'org.apache.pdfbox:pdfbox:2.0.17'
+    compile 'org.apache.pdfbox:fontbox:2.0.17'
+    compile 'org.apache.pdfbox:xmpbox:2.0.17'
 
     compile group: 'org.apache.tika', name: 'tika-core', version: '1.22'
 
@@ -145,7 +138,7 @@ dependencies {
     antlr4 'org.antlr:antlr4:4.7.2'
     compile 'org.antlr:antlr4-runtime:4.7.2'
 
-    compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.4.4'
+    compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.5.0'
 
     compile 'org.postgresql:postgresql:42.2.8'
 
@@ -171,12 +164,13 @@ dependencies {
     compile 'org.jsoup:jsoup:1.12.1'
     compile 'com.mashape.unirest:unirest-java:1.4.9'
 
-    compile 'org.slf4j:slf4j-api:2.0.0-alpha0'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-jcl', version: '3.0.0-20190915.182410-364'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j18-impl', version: '3.0.0-20190915.182922-250'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '3.0.0-20190915.182113-372'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '3.0.0-20190915.182215-368'
-    annotationProcessor group: 'org.apache.logging.log4j', name: 'log4j-core', version: '3.0.0-20190915.182215-368'
+    compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-jcl', version: '3.0.0-SNAPSHOT'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j18-impl', version: '3.0.0-SNAPSHOT'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-plugins', version: '3.0.0-SNAPSHOT'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '3.0.0-SNAPSHOT'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '3.0.0-SNAPSHOT'
+    annotationProcessor group: 'org.apache.logging.log4j', name: 'log4j-core', version: '3.0.0-SNAPSHOT'
 
     compile 'de.undercouch:citeproc-java:1.0.1'
 
@@ -204,19 +198,18 @@ dependencies {
         exclude module: "log4j-core"
     }
 
+
+    testCompile 'io.github.classgraph:classgraph:4.8.47'
     testCompile 'junit:junit:4.12'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.5.2'
     testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.5.2'
     testCompile 'org.junit.platform:junit-platform-launcher:1.5.2'
 
     testCompile 'net.bytebuddy:byte-buddy-parent:1.10.1'
-    testRuntime group: 'org.apache.logging.log4j', name: 'log4j-core', version: '3.0.0-20190915.182215-368'
-    testRuntime group: 'org.apache.logging.log4j', name: 'log4j-jul', version: '3.0.0-20190915.182552-364'
-    testCompile 'org.mockito:mockito-core:3.0.0'
+    testRuntime group: 'org.apache.logging.log4j', name: 'log4j-core', version: '3.0.0-SNAPSHOT'
+    testRuntime group: 'org.apache.logging.log4j', name: 'log4j-jul', version: '3.0.0-SNAPSHOT'
+    testCompile 'org.mockito:mockito-core:3.1.0'
     //testCompile 'com.github.tomakehurst:wiremock:2.24.1'
-    testCompile ('org.reflections:reflections:0.9.11') {
-        exclude module: "jsr305"
-    }
     testCompile 'org.xmlunit:xmlunit-core:2.6.3'
     testCompile 'org.xmlunit:xmlunit-matchers:2.6.3'
     testCompile 'com.tngtech.archunit:archunit-junit5-api:0.11.0'
@@ -225,7 +218,7 @@ dependencies {
     testCompile "org.testfx:testfx-core:4.0.15-alpha"
     testCompile "org.testfx:testfx-junit5:4.0.15-alpha"
 
-    checkstyle 'com.puppycrawl.tools:checkstyle:8.24'
+    checkstyle 'com.puppycrawl.tools:checkstyle:8.25'
     xjc group: 'org.glassfish.jaxb', name: 'jaxb-xjc', version: '2.3.2'
     jython 'org.python:jython-standalone:2.7.1'
 }
@@ -283,7 +276,7 @@ processResources {
     filteringCharset = 'UTF-8'
 
     filesMatching("build.properties") {
-        expand(version: project.version,
+        expand(version: createVersionString(),
                 "year": String.valueOf(Calendar.getInstance().get(Calendar.YEAR)),
                 "authors": new File('AUTHORS').readLines().findAll { !it.startsWith("#") }.join(", "),
                 "developers": new File('DEVELOPERS').readLines().findAll { !it.startsWith("#") }.join(", "),
@@ -408,6 +401,7 @@ run {
             "--add-exports", "javafx.graphics/com.sun.javafx.css=org.controlsfx.controls",
             "--add-opens", "javafx.controls/javafx.scene.control.skin=org.controlsfx.controls",
             "--add-opens", "javafx.graphics/javafx.scene=org.controlsfx.controls",
+            "--add-exports", "javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
             "--add-opens", "javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
             "--add-opens", "javafx.base/com.sun.javafx.binding=com.jfoenix",
             "--add-opens", "javafx.graphics/com.sun.javafx.stage=com.jfoenix",
@@ -478,10 +472,6 @@ processTestResources.dependsOn copyTestResources
 
 tasks.withType(Test) {
     reports.html.destination = file("${reporting.baseDir}/${name}")
-
-    jacoco {
-        append = true
-    }
 }
 
 task jacocoMerge(type: JacocoMerge) {
@@ -512,107 +502,15 @@ modernizer {
 }
 
 // Release tasks
-shadowJar {
-    transform(com.github.jengelman.gradle.plugins.shadow.transformers.Log4j2PluginsCacheFileTransformer)
-    classifier 'fat'
-    zip64 true
+task deleteInstallerTemp(type: Delete) {
+    delete "$buildDir/installer"
 }
 
-/*
- * Changes project.version to VERSION--snapshot--DATE--GIT_HASH
- */
-if (hasProperty('dev')) {
-    String command = "git log --pretty=format:%cd--%h -n 1 --date=short"
-    String commitInfo = ""
-    if (OperatingSystem.current().isWindows()) {
-        commitInfo = "cmd /c $command".execute().in.text
-    } else {
-        commitInfo = command.execute().in.text
-    }
-
-    // determine branch
-    command = "git symbolic-ref -q --short HEAD"
-    String branchName = ""
-    if (OperatingSystem.current().isWindows()) {
-        branchName = "cmd /c $command".execute().in.text
-    } else {
-        branchName = command.execute().in.text
-    }
-    // A newline is returned. Remove it. (trim())
-    // In the context of github, the branch name could be something like "pull/277"
-    // "/" is an illegal character. To be safe, all illegal filename characters are replaced by "_"
-    // http://stackoverflow.com/a/15075907/873282 describes the used pattern.
-    branchName = branchName.trim().replaceAll("[^a-zA-Z0-9.-]", "_")
-
-    // hack string
-    // first the date (%cd), then the branch name, and finally the commit id (%h)
-    String infoString = commitInfo.substring(0, 10) + "--" + branchName + "--" + commitInfo.substring(12)
-
-    project.version += "--snapshot--" + infoString
-}
-
-install4j {
-    installDir = file(project.ext.install4jDir)
-}
-
-task generateFinalJabRefPS1File(type: Copy) {
-    from('buildres') {
-        include 'JabRef.ps1'
-    }
-    into 'build'
-    filter(org.apache.tools.ant.filters.ReplaceTokens, tokens: [jabRefJarFileName: jar.archiveName])
-}
-
-// has to be defined AFTER 'dev' things to have the correct project.version
-task media(type: com.install4j.gradle.Install4jTask, dependsOn: ["releaseJar", "generateFinalJabRefPS1File"]) {
-    projectFile = file('jabref.install4j')
-    release = project.version
-    winKeystorePassword = System.getenv('CERTIFICATE_PW')
-    macKeystorePassword = System.getenv('CERTIFICATE_PW')
-    variables = [
-            versionFourDots: project.ext.threeDotVersion,
-            buildFileName  : jar.archiveName,
-            version        : project.version
-    ]
-
-    doLast {
-        copy {
-            from "build/install4j"
-            into "build/releases"
-        }
-    }
-}
-
-
-task release(dependsOn: ["media", "releaseJar"]) {
-    group = 'JabRef - Release'
-    description 'Creates a release for all target platforms.'
-}
-
-task releaseJar(dependsOn: "shadowJar") {
-    group = 'JabRef - Release'
-    description "Creates a Jar release."
-    doLast {
-        copy {
-            from("$buildDir/libs/JabRef-${project.version}-fat.jar")
-            into("$buildDir/releases")
-            rename { String fileName ->
-                fileName.replace('-fat', '')
-            }
-        }
-        // set executable with read permissions (first true) and for all (false)
-        file("$buildDir/releases/JabRef-${project.version}.jar").setExecutable(true, false)
-    }
-}
-
-task snapJar(dependsOn: "releaseJar", type: Delete) {
-    delete fileTree(dir: "$buildDir/releases/", exclude: "JabRef-${project.version}.jar")
-}
-
+jpackage.dependsOn deleteInstallerTemp
 jlink {
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
-        name = 'JabRefMain'
+        name = 'JabRef'
     }
 
     addOptions("--bind-services")
@@ -662,12 +560,81 @@ jlink {
         provides 'com.microsoft.applicationinsights.core.dependencies.io.grpc.ManagedChannelProvider' with 'com.microsoft.applicationinsights.core.dependencies.io.grpc.netty.shaded.io.grpc.netty.NettyChannelProvider'
     }
 
-    // This is experimental thing; could replace install4j
     jpackage {
-        // Download from https://jdk.java.net/jpackage/ and change path accordingly
-        jpackageHome = 'H:\\Downloading\\openjdk-13-jpackage+49_windows-x64_bin\\jdk-13'
+        // In order for this to work, you need to dowload jpackage from https://jdk.java.net/jpackage/
+        // and put the path to the jdk-14 folder in the environment variable BADASS_JLINK_JPACKAGE_HOME
+        outputDir = "distribution"
+
+        if (OperatingSystem.current().isWindows()) {
+            // This requires WiX to be installed: https://github.com/wixtoolset/wix3/releases
+            installerType = "msi"
+            imageOptions = [
+                    '--win-console',
+                    '--icon', "${projectDir}/src/main/resources/icons/jabref.ico",
+            ]
+            installerOptions = [
+                    '--vendor', 'JabRef',
+                    '--app-version', "${project.version}",
+                    '--win-upgrade-uuid', 'd636b4ee-6f10-451e-bf57-c89656780e36',
+                    '--win-dir-chooser',
+                    '--win-shortcut',
+                    '--temp', "$buildDir/installer",
+                    '--resource-dir', "${projectDir}/buildres/windows"
+            ]
+        }
+
+        if (OperatingSystem.current().isLinux()) {
+            imageOptions = [
+                    '--icon', "${projectDir}/src/main/resources/icons/JabRef-icon-64.png",
+            ]
+            installerOptions = [
+                    '--vendor', 'JabRef',
+                    '--app-version', "${project.version}",
+                    //'--temp', "$buildDir/installer",
+                    '--resource-dir', "${projectDir}/buildres/linux"
+            ]
+        }
+
+        if (OperatingSystem.current().isMacOsX()) {
+            imageOptions = [
+                    '--icon', "${projectDir}/src/main/resources/icons/jabref.icns",
+            ]
+            installerOptions = [
+                    '--vendor', 'JabRef',
+                    '--app-version', "${project.version}"
+            ]
+        }
     }
 }
+
+if (OperatingSystem.current().isWindows()) {
+    tasks.jpackageImage.doLast {
+        copy {
+            from("${projectDir}/buildres/windows") {
+                include "jabref.json", "JabRefHost.bat", "JabRefHost.ps1"
+            }
+            into "$buildDir/distribution/JabRef"
+        }
+    }
+}
+
+if (OperatingSystem.current().isLinux()) {
+    tasks.jpackageImage.doLast {
+        copy {
+            from("${projectDir}/buildres/linux") {
+                include "org.jabref.jabref.json", "jabrefHost.py"
+            }
+            into "$buildDir/distribution/JabRef/lib"
+        }
+    }
+}
+
+// Delete unnecessary folder in application image
+// TODO: Remove this workaround as soon as https://github.com/beryx/badass-jlink-plugin/issues/51 is fixed
+task deleteModsFolder(type: Delete) {
+    delete "$buildDir/distribution/JabRef/app/mods"
+}
+deleteModsFolder.shouldRunAfter jpackageImage
 
 jmh {
     warmupIterations = 5
@@ -700,4 +667,36 @@ task bundleLibreOffice(type: Jar) {
 
     destinationDir = file('lib')
     archiveName = 'libreoffice.jar'
+}
+
+// Returns the value of project.version in production and a string of the format VERSION-dev--DATE--BRANCH--GIT_HASH for development versions
+def createVersionString() {
+    if (hasProperty('dev')) {
+        String command = "git log --pretty=format:%cd--%h -n 1 --date=short"
+        String commitInfo
+        if (OperatingSystem.current().isWindows()) {
+            commitInfo = "cmd /c $command".execute().in.text
+        } else {
+            commitInfo = command.execute().in.text
+        }
+
+        // determine branch
+        command = "git symbolic-ref -q --short HEAD"
+        String branchName
+        if (OperatingSystem.current().isWindows()) {
+            branchName = "cmd /c $command".execute().in.text
+        } else {
+            branchName = command.execute().in.text
+        }
+        // A newline is returned. Remove it. (trim())
+        // In the context of github, the branch name could be something like "pull/277"
+        // "/" is an illegal character. To be safe, all illegal filename characters are replaced by "_"
+        // http://stackoverflow.com/a/15075907/873282 describes the used pattern.
+        branchName = branchName.trim().replaceAll("[^a-zA-Z0-9.-]", "_")
+
+        // first the date (%cd), then the branch name, and finally the commit id (%h)
+        return project.version + "-dev--" + commitInfo.substring(0, 10) + "--" + branchName + "--" + commitInfo.substring(12)
+    } else {
+        return project.version
+    }
 }
